--- a/index.html
+++ b/index.html
@@ -25,8 +25,33 @@
                     <i class="fa-solid fa-magnifying-glass"></i> 
                 </div>
                 <div class="user">
-                    <fa-solid class="fa-cart-shopping"></fa-solid>
+                    <i class="fa-solid fa-cart-shopping"></i>
                     <span>$0.00</span>
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-user"></i>
+                </div>
+            </div>
+            <div class="nav-list">
+                <div>
+                    <i class="fa-solid fa-house"></i>
+                    <span>HOME</span>
+                </div>
+                <div>
+                    <i class="fa-solid fa-couch"></i>
+                    <span>PRODUCTS</span>
+                </div> <div>
+                    <i class="fa-solid fa-dollar-sign"></i>
+                    <span>PRICING</span>
+                </div> <div>
+                    <i class="fa-brands fa-bloggets"></i>
+                    <span>BLOG</span>
+                </div> <div>
+                    <i class="fa-solid fa-star"></i>
+                    <span>SALES</span>
+                </div>
+                <div>
+                    <i class="fa-solid fa-message"></i>
+                    <span>CONTACT</span>
                 </div>
             </div>
         </nav>
