started css, align items and added borders and padding

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <i class="fa-solid fa-dollar-sign"></i>
                     <span>PRICING</span>
                 </div> <div>
-                    <i class="fa-brands fa-bloggets"></i>
+                    <i class="fa-brands fa-bloggers"></i>
                     <span>BLOG</span>
                 </div> <div>
                     <i class="fa-solid fa-star"></i>
