search bar icon

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 </div> <div>
                     <i class="fa-solid fa-dollar-sign"></i>
                     <span>PRICING</span>
-                </div> <div>
+                </div> 
+                <div>
                     <i class="fa-brands fa-bloggers"></i>
                     <span>BLOG</span>
                 </div> <div>
