--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
             </div>
         </nav>
 
+        <!--Landing-->
+        <section class = "landing">
+            <div class="landing-bg"></div>
+            <div class="banner">
+                <img src="images/banner-img.jpg"
+                class="banner-img">
+                <h1 class="banner-heading">LUXURY FURNITURE</h1>
+                <button class="banner-btn banner-btn-1">GO TO SHOP</button>
+                <button class="banner-btn banner-btn-2">EXPLORE</button>
+
+            </div>
+        </section>
+        <!--end of Landing-->
 
     </div>
     <!--end of container-->
