--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section class = "landing">
             <div class="landing-bg"></div>
             <div class="banner">
-                <img src="images/banner-img.jpg"
+                <img src="images/furnitureBackground.jpeg"
                 class="banner-img">
                 <h1 class="banner-heading">LUXURY FURNITURE</h1>
                 <button class="banner-btn banner-btn-1">GO TO SHOP</button>
