created product section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,45 @@
             </div>
         </section>
         <!--end of Landing-->
+        <!--product-->
+        <section class="prodcuts">
+            <div class="products-top">
+                <h3>SEARCH FOR</h3>
+                <h2>15000</h2>
+                <h1>PRODUCTS</h1>
+            </div>
+            <div class="products-icons">
+                <div class="bedroom">
+                    <img src="images/bedroom.png">
+                    <span>Bedroom</span>
+                </div>
+                <div class="bedroom">
+                    <img src="images/bedroom.png">
+                    <span>Bedroom</span>
+                </div>
+                <div class="Buffet">
+                    <img src="images/buffet.png">
+                    <span>buffet</span>
+                </div>
+                <div class="Dinning">
+                    <img src="images/dinning.png">
+                    <span>Dinning</span>
+                </div> <div class="sofa">
+                    <img src="images/sofa.png">
+                    <span>Sofa</span>
+                </div>
+                <div class="Table">
+                    <img src="images/Table.png">
+                    <span>Table</span>
+                </div>
+                <div class="Wardrobe">
+                    <img src="images/wardrobe.png">
+                    <span>Wardrobe</span>
+                </div>
+            
+            </div>
+        </section>
+        <!--end of product-->
 
     </div>
     <!--end of container-->
