--- a/index.html
+++ b/index.html
@@ -71,17 +71,13 @@
         </section>
         <!--end of Landing-->
         <!--product-->
-        <section class="prodcuts">
+        <section class="products">
             <div class="products-top">
                 <h3>SEARCH FOR</h3>
                 <h2>15000</h2>
                 <h1>PRODUCTS</h1>
             </div>
             <div class="products-icons">
-                <div class="bedroom">
-                    <img src="images/bedroom.png">
-                    <span>Bedroom</span>
-                </div>
                 <div class="bedroom">
                     <img src="images/bedroom.png">
                     <span>Bedroom</span>
