--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </section>        
         <!--end of Blog-->
         <section class="contact">
-            <div class="contact-section">
+            <div class="contact-content">
                 <div class="content-left">
                     <h2>Subscribe to our news letter and grab <span>30% OFF</span></h2>
                 </div>
